# ServiGator

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
inc/: enums.h  main.h  natives.h  types.h
lib/: ScriptHookRDR2.lib
src/ServiGator/: CMailbox.cpp  CMailbox.h  CServer.cpp  CServer.h  commands.cpp  commands.h  commandtypes.h  main.cpp  script.cpp  script.h  util.cpp  util.h
